--- a/package.json
+++ b/package.json
@@ -1,5 +1,25 @@
 {
+  "name": "project",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "type": "module",
   "dependencies": {
-    "react-router-dom": "^6.20.1"
-  }
+    "express": "^4.18.2",
+    "js-tokens": "^4.0.0",
+    "loose-envify": "^1.4.0",
+    "nodemon": "^3.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router": "^6.20.1",
+    "react-router-dom": "^6.20.1",
+    "scheduler": "^0.23.0"
+  },
+  "scripts": {
+    "dev":  "nodemon api/index.js",
+    "start": "node api/index.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
