--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "main": "index.js",
   "type": "module",
   "dependencies": {
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "js-tokens": "^4.0.0",
     "loose-envify": "^1.4.0",
+    "mongoose": "^8.0.3",
     "nodemon": "^3.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -16,7 +18,7 @@
     "scheduler": "^0.23.0"
   },
   "scripts": {
-    "dev":  "nodemon api/index.js",
+    "dev": "nodemon api/index.js",
     "start": "node api/index.js"
   },
   "keywords": [],
