--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "js-tokens": "^4.0.0",
+    "jsonwebtoken": "^9.0.2",
     "loose-envify": "^1.4.0",
     "mongoose": "^8.0.3",
     "nodemon": "^3.0.2",
