--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   },
   "scripts": {
     "dev": "nodemon api/index.js",
-    "start": "node api/index.js"
+    "start": "node api/index.js", 
+    "build": "npm istall && npm install --prefix client && npm run build --prefix client"
   },
   "keywords": [],
   "author": "",
